--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,46 @@ body {
   font-family: 'Cairo', sans-serif;
 }
 
+.container{
+  height: 1vh;
+  padding: 20px;
+  display: grid;
+  grid-template-columns:  100vh ;
+  grid-template-rows: 50vh 100vh 500px;
+  grid-template-areas: 
+  "nav nav nav nav nav"
+  "one one one one one"
+  "two two two two two"
+  "tree tree tree tree tree"
+  "footer footer footer footer footer"
+  ;
+}
+
+.navbar{
+  grid-area: nav;
+  
+}
+
+.sectionOne{
+  grid-area: one ;
+  background-color: rgb(0, 140, 255);
+}
+.sectionTwo{
+  grid-area: two;
+  background-color:#e3e3e3
+}
+.sectionThree{
+  background-color: rgb(221, 207, 221);
+  grid-area: tree;
+}
+.footer{
+  grid-area: footer;
+  background-color: #333;
+  width: 100%;
+  height: 100%;
+  color: white;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -15,24 +55,34 @@ a {
   box-sizing: border-box;
 }
 .button-white{
+  display: flex;
   background-color: whitesmoke;
+  justify-content: center;
+  align-items: center;
   color: purple;
-  padding: 0px 50px;
   border-radius: 8px;
+  font-weight: bold;
   margin: 0px 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-.button-purple{
-  background-color: purple;
-  color: white;
-  padding: 0px 20px;
-  border-radius: 8px;
-  margin: 0px 10px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+    width: 200px;
+  }
+  
+  .button-purple {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: purple;
+    color: white;
+    border-radius: 8px;
+  font-weight: bold;
+    margin: 0px 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    width: 200px;
+  }
+  
+  /* @media (prefers-color-scheme: dark) {
+    html {
+      color-scheme: dark;
   }
   body {
     color: white;
